src/test/ui/error-codes/E0503.stderr
error[E0503]: cannot use `value` because it was mutably borrowed
  --> $DIR/E0503.rs:14:16
   |
13 |     let _borrow = &mut value;
   |                        ----- borrow of `value` occurs here
14 |     let _sum = value + 1; //~ ERROR E0503
   |                ^^^^^ use of borrowed `value`

error: aborting due to previous error

